gotowa metoda read from file do hrms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,10 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "cctype": "cpp",
+        "fstream": "cpp",
+        "string": "cpp",
+        "vector": "cpp"
     }
 }
